# os

./: .gitignore  main.cpp
1/: script.bat
2/: CMakeLists.txt  main.cpp  script.bat
4/: CMakeLists.txt  Logger.h  emu.cpp  main.cpp  script.sh  settings.h
5/: CMakeLists.txt  Client app.html  Logger.h  main.cpp  prompts.h  settings.h
5/server/: db.js  errorHandler.js  logger.js  main.js  package-lock.json  package.json  routes.js
